--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "weather-by-city-api",
   "version": "1.0.0",
   "description": "Weather API using Open-Meteo",
-  "main": "src/index.js",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "dependencies": {
     "axios": "^1.13.2",
